versão quase final - dessa vez vai

--- a/hospital_system/app1/templates/triagem.html
+++ b/hospital_system/app1/templates/triagem.html
@@ -118,12 +118,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Consultas</a></li>
-                <li><a href="#">Secretárias</a></li>
-                <li><a href="#">Pacientes</a></li>
-                <li><a href="#">Médicos</a></li>
-                <li><a href="#">Remédios</a></li>
+                <li><a href="in">Início</a></li>
+                <li><a href="consulta">Consultas</a></li>
+                <li><a href="enfermeiras">Enfermeira</a></li>
+                <li><a href="pacientes">Pacientes</a></li>
+                <li><a href="medicos">Médicos</a></li>
+                <li><a href="remedios">Remédios</a></li>
             </ul>
         </nav>
     </header>
@@ -176,3 +176,5 @@
     </footer>
 </body>
 </html>
+<!--  triagem vai para consultas 
+  para que cada paciente seja unico, mesmo fazendo varias triagens-->
