--- a/hospital_system/app1/templates/triagem.html
+++ b/hospital_system/app1/templates/triagem.html
@@ -106,7 +106,7 @@
             color: white;
             text-align: center;
             padding: 20px 0;
-            margin-top: 20px;
+            margin-top: 90px;
         }
 
         footer .footer {
@@ -130,38 +130,38 @@
 
     <section>
         <h1>Formulário de Triagem</h1>  
-        <form method="post" action="index.html">
+        <form method="post" action="Pacientes.html">
             {% csrf_token %}
             <label style="color: red; font-weight: normal;"><span>*</span> Indica uma pergunta obrigatória</label>
             <label for="nome"><span>*</span>Nome:</label>
-            <input name="nome" id="nome" type="text" required>
+            <input name="nome" id="nome" type="text" value="{{Paciente.nome}}" required>
 
             <label for="CPF"><span>*</span>CPF:</label>
-            <input name="cpf" id="CPF" type="number" required placeholder="Somente números">
+            <input name="cpf" id="CPF" type="number"  value="{{Paciente.cpf}}"required placeholder="Somente números">
 
             <label for="ncelular"><span>*</span>N° de Celular:</label>
-            <input name="ncelular" id="ncelular" type="tel" pattern="[0-9]{11}" required>
+            <input name="ncelular" id="ncelular" type="tel" value="{{Paciente.ncelular}}" pattern="[0-9]{11}" required>
 
             <label for="ncelular_sec"><span>*</span>N° de Celular Secundário:</label>
-            <input name="ncelular_sec" id="ncelular_sec" type="tel" pattern="[0-9]{11}" required>
+            <input name="ncelular_sec" id="ncelular_sec" type="tel"  value="{{Paciente.ncelular_sec}}" pattern="[0-9]{11}" required>
 
             <label for="endereco"><span>*</span>Endereço:</label>
-            <input name="endereco" id="endereco" type="text" maxlength="100" required>
+            <input name="endereco" id="endereco" type="text" value="{{Paciente.endereco}}" maxlength="100" required>
 
             <label for="sexo"><span>*</span>Sexo:</label>
-            <select name="sexo" id="sexo" required>
+            <select name="sexo" id="sexo" value="{{Paciente.sexo}}" required>
                 <option>Masculino</option>
                 <option>Feminino</option>
             </select>
 
             <label for="email">Email:</label>
-            <input name="email" id="email" type="email">
+            <input name="email" id="email"  value="{{Paciente.email}}"type="email">
 
             <label for="data_nascimento"><span>*</span>Data de Nascimento:</label>
-            <input name="data_nascimento" id="data_nascimento" type="date" required>
+            <input name="data_nascimento" id="data_nascimento"  value="{{Paciente.data_nascimento}}"type="date" required>
 
             <label for="sintomas"><span>*</span>Sintomas:</label>
-            <textarea name="sintomas" id="sintomas" rows="5" cols="15" placeholder="Como você tem se sentido esses dias?" required></textarea>
+            <textarea name="sintomas" id="sintomas" rows="5" cols="15"  value="{{Paciente.sintomas}}"placeholder="Como você tem se sentido esses dias?" required></textarea>
             
             <label>
                 <input type="checkbox" required><a href=""> <span>*</span>Aceito os Termos de Acesso</a>
