--- a/hospital_system/app1/templates/Enfermeiras.html
+++ b/hospital_system/app1/templates/Enfermeiras.html
@@ -1,6 +1,6 @@
 {% for enfermeira in messages %}
 {% endfor %}
-<table border="1">
+
   <style>
     thead{
       font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
     section {
         margin: 20px auto;
         padding: 20px;
-        max-width: 600px;
+        max-width: 540px;
         background-color: #ffffff;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -138,6 +138,8 @@
         </ul>
     </nav>
 </header>
+<section>
+<table border="1">
   <thead>
     <tr>
        <td>Nome</td>
@@ -160,3 +162,7 @@
     {% endfor %}
   </tbody>
 </table>
+<footer>
+    <div class="footer">Todos os direitos reservados &copy; 2024</div>
+</footer>
+</section>
