--- a/hospital_system/app1/templates/Medicos.html
+++ b/hospital_system/app1/templates/Medicos.html
@@ -1,7 +1,7 @@
 {% for elemento in messages %}
     <h1>{{elemento}}</h1>
 {% endfor %}
-<table border="1">
+
   <style>
     thead{
       font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
     section {
         margin: 20px auto;
         padding: 20px;
-        max-width: 600px;
+        max-width: 750px;
         background-color: #ffffff;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -139,6 +139,8 @@
         </ul>
     </nav>
 </header>
+<section>
+<table border="1">
   <thead>
     <tr> <!--linha de cabeçalho-->
        <td>Nome</td>
@@ -164,4 +166,8 @@
     </tr>
     {% endfor %}
   </tbody>
-</table>
+ </table>
+ <footer>
+    <div class="footer">Todos os direitos reservados &copy; 2024</div>
+</footer>
+ </section>
