--- a/hospital_system/app1/templates/Marcação.html
+++ b/hospital_system/app1/templates/Marcação.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centro Hospitalar de SR do Bonfim</title>
+    <title>Triagem - Centro Hospitalar de SR do Bonfim</title>
     <style>
         * {
             margin: 0;
@@ -44,37 +45,61 @@
         }
 
         section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: calc(100vh - 140px);
-            margin: 0;
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 600px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        section h1 {
+            color: #337ab7;
             text-align: center;
-        }
-
-        section article h1 {
-            font-size: 36px;
-            margin-top: 20px;
-        }
-
-        section p {
-            font-size: 24px;
             margin-bottom: 20px;
         }
 
-        .triagem{
-            border: 2px solid #337ab7;
-            border-radius: 10px ;
-            padding: 10px;
-            background-color: #337ab7;
-            cursor: pointer;
+        span{
+            color: red;
+        } 
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin: 10px 0 5px;
         }
 
-        .triagem a{
-            color: white;
+        input, select, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        input[type="checkbox"] {
+            width: auto;
+        }
+
+        label a{
             text-decoration: none;
+            color: #000
+        }
+
+        input[type="submit"] {
+            background-color: #337ab7;
+            color: #fff;
             font-size: 18px;
+            border: none;
+            cursor: pointer;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #285e8e;
         }
 
         footer {
@@ -82,24 +107,11 @@
             color: white;
             text-align: center;
             padding: 20px 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+            margin-top: 90px;
         }
 
         footer .footer {
             font-size: 14px;
-        }
-
-        
-        @media (max-width: 768px) {
-            nav ul {
-                flex-direction: column;
-            }
-
-            nav ul li {
-                margin: 10px 0;
-            }
         }
     </style>
 </head>
@@ -116,17 +128,28 @@
             </ul>
         </nav>
     </header>
+
     <section>
-        <article>
-            <h1>Centro Hospitalar de Senhor do Bonfim</h1>
-        </article>
-        <p>Sua saúde é a nossa alegria!</p>
-        <div class="triagem"><a href="marcarconsulta">marque sua consulta</a></div>
-        <div class="triagem"><a href="triagem">Faça sua triagem</a></div>
+        <h1>central de marcaçâo</h1>  
+       
+            {% if messages %}
+            {% for message in messages %}
+                <p style="color: green;">{{ message }}</p>
+                <p style="color: red;">{{ message }}</p>""
+            {% endfor %}
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            
+            <button type="submit">Cadastrar</button>
+        </form>
+        
     </section>
 
     <footer>
-        <div class="footer">Todos os direitos reservados &copy;</div>
+        <div class="footer">Todos os direitos reservados &copy; 2024</div>
     </footer>
 </body>
 </html>
+<!--  triagem v
