--- a/hospital_system/app1/templates/Pacientes.html
+++ b/hospital_system/app1/templates/Pacientes.html
@@ -150,10 +150,11 @@
       <td>CPF</td>
       <td>Situação</td>
       <td>Sintoma</td>
-      <td>Data de nascimento</td>
       <td>Endereço</td>
       <td>Telefone</td>
       <td>Telefone Secundário</td>
+      <td>°°°</td>
+      
     </tr>
   </thead>
   <tbody>
@@ -163,10 +164,15 @@
       <td>{{valor.cpf}}</td>
       <td>{{valor.situacao}}</td>
       <td>{{valor.sintoma}}</td>
-      <td>{{valor.data_nascimento}}</td>
       <td>{{valor.endereco}}</td>
       <td>{{valor.telefone}}</td>
       <td>{{valor.telefone_familiar}}</td>
+      <td>
+        <a href="{% url 'detalharPaciente' valor.id %}"><img src="https://cdn-icons-png.flaticon.com/512/64/64673.png" width="20px"></a>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/32/32355.png" width="20px"></a>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/6861/6861362.png" width="20px">
+        </a>
+    </td>
     </tr> 
 </section>   
     {% endfor %}
@@ -175,4 +181,4 @@
 
 <footer>
     <div class="footer">Todos os direitos reservados &copy; 2024</div>
-</footer>
+</footer>""
