criação da página de login

--- a/hospital_system/app1/templates/Marcação.html
+++ b/hospital_system/app1/templates/Marcação.html
@@ -130,7 +130,7 @@
     </header>
 
     <section>
-        <h1>central de marcaçâo</h1>  
+        <h1>Central de Marcaçâo</h1>  
        
             {% if messages %}
             {% for message in messages %}
@@ -152,4 +152,3 @@
     </footer>
 </body>
 </html>
-<!--  triagem v
