--- a/hospital_system/app1/templates/index.html
+++ b/hospital_system/app1/templates/index.html
@@ -66,7 +66,8 @@
         .triagem{
             border: 2px solid #337ab7;
             border-radius: 10px ;
-            padding: 10px;
+            padding: 12px;
+            margin: 10px;
             background-color: #337ab7;
             cursor: pointer;
         }
@@ -121,7 +122,7 @@
             <h1>Centro Hospitalar de Senhor do Bonfim</h1>
         </article>
         <p>Sua saúde é a nossa alegria!</p>
-        <div class="triagem"><a href="marcarconsulta">marque sua consulta</a></div>
+        <div class="triagem"><a href="marcarconsulta">Marque uma consulta</a></div>
         <div class="triagem"><a href="triagem">Faça sua triagem</a></div>
     </section>
 
