finalmente ta quase

--- a/hospital_system/app1/templates/Marcação.html
+++ b/hospital_system/app1/templates/Marcação.html
@@ -119,7 +119,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="in">Início</a></li>
+                <li><a href="">Início</a></li>
                 <li><a href="consulta">Consultas</a></li>
                 <li><a href="enfermeiras">Enfermeira</a></li>
                 <li><a href="pacientes">Pacientes</a></li>
