--- a/hospital_system/app1/templates/triagem.html
+++ b/hospital_system/app1/templates/triagem.html
@@ -86,7 +86,7 @@
             color: #000
         }
 
-        input[type="submit"] {
+        input .submit {
             background-color: #337ab7;
             color: #fff;
             font-size: 18px;
@@ -118,7 +118,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="in">Início</a></li>
+                <li><a href="">Início</a></li>
                 <li><a href="consulta">Consultas</a></li>
                 <li><a href="enfermeiras">Enfermeira</a></li>
                 <li><a href="pacientes">Pacientes</a></li>
@@ -151,5 +151,3 @@
     </footer>
 </body>
 </html>
-<!--  triagem vai para consultas 
-  para que cada paciente seja unico, mesmo fazendo varias triagens-->
