--- a/hospital_system/app1/templates/adm/consultas/Marcação.html
+++ b/hospital_system/app1/templates/adm/consultas/Marcação.html
@@ -120,8 +120,8 @@
         <nav>
             <ul>
                 <li><a href="">Início</a></li>
-                <li><a href="consulta">Consultas</a></li>
-                <li><a href="enfermeiras">Enfermeira</a></li>
+                <li><a href="consultas">Consultas</a></li>
+                <li><a href="enfermeiros">enfermeiro</a></li>
                 <li><a href="pacientes">Pacientes</a></li>
                 <li><a href="medicos">Médicos</a></li>
                 <li><a href="remedios">Remédios</a></li>
