--- a/hospital_system/app1/templates/base.html
+++ b/hospital_system/app1/templates/base.html
@@ -16,10 +16,10 @@
           <a class="nav-link text-light" href="/">Início</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link text-light" href="consulta">Consultas</a>
+          <a class="nav-link text-light" href="consultas">Consultas</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link text-light" href="enfermeiras">Enfermeira</a>
+          <a class="nav-link text-light" href="enfermeiros">Enfermeiros</a>
         </li>
         <li class="nav-item mx-3">
           <a class="nav-link text-light" href="pacientes">Pacientes</a>
