--- a/hospital_system/app1/templates/adm/consultas/editarConsulta.html
+++ b/hospital_system/app1/templates/adm/consultas/editarConsulta.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-        <a href="{% url 'consulta' %}" class="btn btn-secondary">Cancelar</a>
+        <a href="{% url 'consultas' %}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 {% endblock %}
