--- a/hospital_system/app1/templates/adm/index.html
+++ b/hospital_system/app1/templates/adm/index.html
@@ -109,8 +109,8 @@
         <nav>
             <ul>
                 <li><a href="">Início</a></li>
-                <li><a href="consulta">Consultas</a></li>
-                <li><a href="enfermeiras">Enfermeira</a></li>
+                <li><a href="consultas">Consultas</a></li>
+                <li><a href="enfermeiros">Enfermeiros</a></li>
                 <li><a href="pacientes">Pacientes</a></li>
                 <li><a href="medicos">Médicos</a></li>
                 <li><a href="remedios">Remédios</a></li>
