--- a/hospital_system/app1/templates/base.html
+++ b/hospital_system/app1/templates/base.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item mx-3">
-          <a class="nav-link text-light" href="/">Início</a>
+          <a class="nav-link text-light" href="Home">Início</a>
         </li>
         <li class="nav-item mx-3">
           <a class="nav-link text-light" href="consultas">Consultas</a>
