--- a/hospital_system/app1/templates/adm/home.html
+++ b/hospital_system/app1/templates/adm/home.html
@@ -123,7 +123,7 @@
         </article>
         <p>Sua saúde é a nossa alegria!</p>
         <div class="triagem"><a href="marcarconsulta">Marque uma consulta</a></div>
-        <div class="triagem"><a href="triagem">Faça sua triagem</a></div>
+        <div class="triagem"><a href="triagem">Faça uma triagem</a></div>
     </section>
 
     <footer>
