--- a/hospital_system/app1/templates/adm/pacientes/Pacientes.html
+++ b/hospital_system/app1/templates/adm/pacientes/Pacientes.html
@@ -12,11 +12,9 @@
       <tr>
         <th>Nome</th>
         <th>CPF</th>
-        <th>Situação</th>
         <th>Sintoma</th>
-        <th>Endereço</th>
-        <th>Telefone</th>
-        <th>Telefone Secundário</th>
+        <th>Situação</th>
+        <th>Etapa</th>
         <th>Ações</th>
       </tr>
     </thead>
@@ -25,11 +23,9 @@
         <tr>
           <td>{{ paciente.nome }}</td>
           <td>{{ paciente.cpf }}</td>
-          <td>{{ paciente.situacao }}</td>
           <td>{{ paciente.sintoma }}</td>
-          <td>{{ paciente.endereco }}</td>
-          <td>{{ paciente.telefone }}</td>
-          <td>{{ paciente.telefone_familiar }}</td>
+          <td>{{ paciente.situacao }}</td>
+          <td>{{ paciente.estado_consulta}}</td>
           <td>
             <a href="{% url 'detalharPaciente' paciente.id %}" class="btn btn-info btn-sm">
               <i class="fa fa-info" aria-hidden="true"></i>
