achei que ia, mas não foi. Agora vai

--- a/hospital_system/app1/templates/medico/login_medico.html
+++ b/hospital_system/app1/templates/medico/login_medico.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container mt-5">
         <h2 class="text-center mb-4">Login Médico</h2>
-
+        {% csrf_token %}
         <form method="POST">
             {% csrf_token %}
             <div class="mb-3">
