Atualizar o index.html

--- a/hospital_system/app1/templates/index.html
+++ b/hospital_system/app1/templates/index.html
@@ -313,6 +313,6 @@
             });
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZL9NS7RFpxa0LvxsD86fppSUu6kCm_AQ&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
 </body>
 </html>
